--- a/views/manage-years.ejs
+++ b/views/manage-years.ejs
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>harsh</title>
 </head>
 <body>
   <h2>View Years for <%= department.name %></h2>
@@ -11,9 +11,9 @@
     <select name="year" id="">
       <option value="">Select Year</option>
       <option value="<%= `First Year - ${department.name}` %>"><%= `First Year - ${department.name}` %></option>
-      <option value"<%= `Second Year - ${department.name}` %>"><%= `Second Year - ${department.name}` %></option>
-      <option value"<%= `Third Year - ${department.name}` %>"><%= `Third Year - ${department.name}` %></option>
-      <option value"<%= `Fourth Year - ${department.name}` %>"><%= `Fourth Year - ${department.name}` %></option>
+      <option value="<%= `Second Year - ${department.name}` %>"><%= `Second Year - ${department.name}` %></option>
+      <option value="<%= `Third Year - ${department.name}` %>"><%= `Third Year - ${department.name}` %></option>
+      <option value="<%= `Fourth Year - ${department.name}` %>"><%= `Fourth Year - ${department.name}` %></option>
     </select>
   <button type="submit">Add Year</button>
   </form>
