institute auth verification done

--- a/public/stylesheets/manage-divisions.css
+++ b/public/stylesheets/manage-divisions.css
@@ -468,6 +468,8 @@ form input {
     margin: 20px auto;
     max-width: 1264px;
     font-family: "Instrument Sans", sans-serif;
+    padding-right: 125px;
+
   }
   
   .logout-btn {
