--- a/views/classTeacher-dashboard.ejs
+++ b/views/classTeacher-dashboard.ejs
@@ -110,8 +110,8 @@
     <div class="salutation">
         <span>Welcome, </span>
         <h3><%= teacher.name %></h3>
-        <span>Institute Name : <%= teacher.institute %></span>
-        <span>Class Teacher : <%= teacher.classTeacherOf %></span>
+        <span>Institute Name : <%= teacher.institute.iname %></span> <br>
+        <span>Class Teacher : <%= teacher.classTeacherOf.divisionName %></span>
     </div>
 
     <div class="search-box">
