--- a/views/hod-dashboard.ejs
+++ b/views/hod-dashboard.ejs
@@ -55,7 +55,7 @@
     </div>
 
     <div class="salutation-bar">
-        <a href="logout.php" class="logout-btn">Logout</a>
+        <a href="/logout" class="logout-btn">Logout</a>
     </div>
 
     <div class="salutation">
