--- a/public/stylesheets/classTeacher-dashboard.css
+++ b/public/stylesheets/classTeacher-dashboard.css
@@ -88,6 +88,16 @@
     margin-top: 5px;
     margin-bottom: 20px;
 }
+.salutation span:nth-of-type(3){
+    font-family: "Instrument Sans", sans-serif;
+    display: inline-block; 
+    font-size: 16px;
+    font-weight: 600;
+    color: #000000;
+    margin-left: 100px;
+    /* margin-top: 5px; */
+    margin-bottom: 20px;
+}
 
 
 .search-box {
