--- a/public/stylesheets/hod-dashboard.css
+++ b/public/stylesheets/hod-dashboard.css
@@ -371,6 +371,7 @@ th {
     margin: 20px auto;
     max-width: 1264px;
     font-family: "Instrument Sans", sans-serif;
+    padding-right: 125px;
   }
   
   .logout-btn {
