--- a/public/stylesheets/student-list.css
+++ b/public/stylesheets/student-list.css
@@ -163,6 +163,7 @@
     margin: 20px auto;
     max-width: 1264px;
     font-family: "Instrument Sans", sans-serif;
+    padding-right: 125px;
   }
   
   .logout-btn {
