--- a/views/student-profile.ejs
+++ b/views/student-profile.ejs
@@ -36,7 +36,7 @@
         </div>
     </div>
     <div class="salutation-bar">
-        <a href="logout.php" class="logout-btn">Logout</a>
+        <a href="/logout" class="logout-btn">Logout</a>
     </div>
 
         <div class="salutation">
